[project]
name = "wedding-flask"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "ics==0.7.2",
    "markdown==3.10.2",
    "pyairtable==3.3.0",
    "python-slugify==8.0.4",
    "tatsu<5.10",
]
