[project]
name = "wedding-flask"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.3",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-sitemap>=0.4.0",
    "geocoder>=1.38.1",
    "icalendar>=7.0.3",
    "markdown==3.10.2",
    "pyairtable==3.3.0",
    "python-slugify==8.0.4",
]
